plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
}

sourceCompatibility = '21'

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview', '-Xlint:preview']
}
